# PixCDust

./: .gitignore  .readthedocs.yaml  AUTHORS.md  Deploy.md  NOTICE  README.md  add_header.sh  licence_py.txt  pyproject.toml  source_header.txt
pixcdust/converters/: __init__.py  core.py  geo_utils.py  gpkg.py  shapefile.py  zarr.py
pixcdust/dggs/: dggs_converter.py  dggs_tuto.ipynb  h3_dggs_tools.py  h3_tools.py
pixcdust/downloaders/: __init__.py  hydroweb_next.py
pixcdust/notebooks/: convert_to_zcollection.ipynb  dggs_tuto.ipynb  download_pixc_to_gpkg.ipynb
pixcdust/notebooks/convert/: convert_to_zcollection.ipynb  dggs_tuto.ipynb  download_pixc_to_gpkg.ipynb  download_pixc_to_zarr.ipynb
pixcdust/notebooks/data/: aoi.gpkg
pixcdust/notebooks/read_and_use/: display_in_folium.ipynb  read_netcdf.ipynb
pixcdust/readers/: __init__.py  base_reader.py  gpkg.py  netcdf.py  zarr.py
pixcdust/tests/: conftest.py  init_tests.py  mock.py  temporary.ipynb  test_converters.py  test_converters_mock.py  test_dggs.py  test_downloaders.py
pixcdust/tests/mock_data/: swot_pixc.nc
pixcdust/tools/: convert_pixc.py
source/: conf.py  index.rst  tutorials.rst
utils/: dggs.py
