[tool.poetry]
name = "pixcdust"
version = "0.1.1"
description = ""
authors = ["zawadzl <lionel.zawadzki@cnes.fr>"]
readme = "README.md"
packages = [{include = "pixcdust"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
fiona = "^1.9.5"
pandas = "^2.2.0"
geopandas = "^0.14.3"
h3 = "^3.7.6"
xdggs = "^0.2.0"
astropy = "^6.1.7"
astropy-healpix = "^1.1.0"
xarray = "^2024.2.0"
shapely = "^2.0.3"
black = "^24.2.0"
flake8 = "^7.0.0"
click = "^8.1.7"
zarr = ">=2.11,<3.0"
zcollection = "^2024.2.0"
netcdf4 = "^1.6.5"
tqdm = "^4.66.4"
pyogrio = "^0.8.0"
pyarrow = "^16.1.0"
eodag = "^2.12.1"
folium = "^0.16.0"
branca = "^0.7.2"
xvec = "^0.3.0"

[tool.poetry.group.dev.dependencies]
decorator = "^5.1.1"
ipykernel = "^6.29.4"
matplotlib = "^3.9.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
gitpython = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
pydata-sphinx-theme = "*"
sphinx-autodoc-typehints = "*"
nbsphinx = "*"
sphinx-autoapi = "*"
ipykernel = "*"
sphinx-collections = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
